Crash for --trace-expand --warn-uninitialized flags combination
When both --trace-expand --warn-uninitialized get passed then cmMakefile::ExpandVariablesInStringNew gets null filename
from cmMakefile::PrintCommandTrace, line 274, what calls std::string constructor with nullptr
(line 2706) and crashes CMake. Null filenames occur for $ENV or system variables like CMAKE_CXX_FLAGS during CMake initialization.
They can be checked with --check-system-vars, so most likely they can be ignored for default case.
Possible fix: R2RT/cmake@1e1ab568
Callstack:
cmake.exe!cmMakefile::ExpandVariablesInStringNew(std::basic_string<char,std::char_traits<char>,std::allocator<char> > & errorstr, std::basic_string<char,std::char_traits<char>,std::allocator<char> > & source, bool escapeQuotes, bool noEscapes, bool atOnly, const char * filename, long line, bool removeEmpty, bool replaceAt) Line 2712 C++
cmake.exe!cmMakefile::ExpandVariablesInString(std::basic_string<char,std::char_traits<char>,std::allocator<char> > & source, bool escapeQuotes, bool noEscapes, bool atOnly, const char * filename, long line, bool removeEmpty, bool replaceAt) Line 2462 C++
cmake.exe!cmMakefile::PrintCommandTrace(const cmListFileFunction & lff) Line 275 C++
cmake.exe!cmMakefile::ExecuteCommand(const cmListFileFunction & lff, cmExecutionStatus & status) Line 339 C++
cmake.exe!cmMakefile::ReadListFile(const cmListFile & listFile, const std::basic_string<char,std::char_traits<char>,std::allocator<char> > & filenametoread) Line 592 C++
cmake.exe!cmMakefile::Configure() Line 1515 C++
cmake.exe!cmGlobalGenerator::Configure() Line 1170 C++
cmake.exe!cmGlobalVisualStudio8Generator::Configure() Line 79 C++
cmake.exe!cmake::ActualConfigure() Line 1409 C++
cmake.exe!cmake::Configure() Line 1250 C++
cmake.exe!cmake::Run(const std::vector<std::basic_string<char,std::char_traits<char>,std::allocator<char> >,std::allocator<std::basic_string<char,std::char_traits<char>,std::allocator<char> > > > & args, bool noconfigure) Line 1590 C++
cmake.exe!do_cmake(int ac, const char * const * av) Line 301 C++
cmake.exe!main(int ac, const char * const * av) Line 183 C++
[External Code]
Example crash:
/mnt/d/cmake-test/CMakeLists.txt(1): cmake_minimum_required(VERSION 3.10 FATAL_ERROR )
/mnt/d/cmake-test/CMakeLists.txt(2): project(CMake-test CXX )
/mnt/d/cmake-r2rt-ssh/Modules/CMakeDetermineSystem.cmake(35): if(CMAKE_HOST_UNIX )
/mnt/d/cmake-r2rt-ssh/Modules/CMakeDetermineSystem.cmake(36): find_program(CMAKE_UNAME uname /bin /usr/bin /usr/local/bin )
/mnt/d/cmake-r2rt-ssh/Modules/CMakeDetermineSystem.cmake(37): if(CMAKE_UNAME )
/mnt/d/cmake-r2rt-ssh/Modules/CMakeDetermineSystem.cmake(38): if(CMAKE_HOST_SYSTEM_NAME STREQUAL AIX )
/mnt/d/cmake-r2rt-ssh/Modules/CMakeDetermineSystem.cmake(44): else()
/mnt/d/cmake-r2rt-ssh/Modules/CMakeDetermineSystem.cmake(45): exec_program(/bin/uname ARGS -r OUTPUT_VARIABLE CMAKE_HOST_SYSTEM_VERSION )
/mnt/d/cmake-r2rt-ssh/Modules/CMakeDetermineSystem.cmake(47): if(CMAKE_HOST_SYSTEM_NAME MATCHES Linux|CYGWIN.*|Darwin|^GNU$ )
/mnt/d/cmake-r2rt-ssh/Modules/CMakeDetermineSystem.cmake(48): exec_program(/bin/uname ARGS -m OUTPUT_VARIABLE CMAKE_HOST_SYSTEM_PROCESSOR RETURN_VALUE val )
/mnt/d/cmake-r2rt-ssh/Modules/CMakeDetermineSystem.cmake(50): if(CMAKE_HOST_SYSTEM_NAME STREQUAL Darwin AND CMAKE_HOST_SYSTEM_PROCESSOR STREQUAL Power Macintosh )
/mnt/d/cmake-r2rt-ssh/Modules/CMakeDetermineSystem.cmake(67): if(0 GREATER 0 )
/mnt/d/cmake-r2rt-ssh/Modules/CMakeDetermineSystem.cmake(70): set(CMAKE_UNAME /bin/uname CACHE INTERNAL uname command )
/mnt/d/cmake-r2rt-ssh/Modules/CMakeDetermineSystem.cmake(72): string(REPLACE " CMAKE_HOST_SYSTEM_PROCESSOR x86_64 )
/mnt/d/cmake-r2rt-ssh/Modules/CMakeDetermineSystem.cmake(73): string(REPLACE / _ CMAKE_HOST_SYSTEM_PROCESSOR x86_64 )
/mnt/d/cmake-r2rt-ssh/Modules/CMakeDetermineSystem.cmake(89): if(CMAKE_TOOLCHAIN_FILE )
/mnt/d/cmake-r2rt-ssh/Modules/CMakeDetermineSystem.cmake(109): if(CMAKE_SYSTEM_NAME )
/mnt/d/cmake-r2rt-ssh/Modules/CMakeDetermineSystem.cmake(114): elseif(CMAKE_VS_WINCE_VERSION )
/mnt/d/cmake-r2rt-ssh/Modules/CMakeDetermineSystem.cmake(120): else()
/mnt/d/cmake-r2rt-ssh/Modules/CMakeDetermineSystem.cmake(121): set(CMAKE_SYSTEM_NAME Linux )
/mnt/d/cmake-r2rt-ssh/Modules/CMakeDetermineSystem.cmake(122): if(NOT DEFINED CMAKE_SYSTEM_VERSION )
/mnt/d/cmake-r2rt-ssh/Modules/CMakeDetermineSystem.cmake(123): set(CMAKE_SYSTEM_VERSION 4.4.0-43-Microsoft )
/mnt/d/cmake-r2rt-ssh/Modules/CMakeDetermineSystem.cmake(125): set(CMAKE_SYSTEM_PROCESSOR x86_64 )
/mnt/d/cmake-r2rt-ssh/Modules/CMakeDetermineSystem.cmake(126): set(CMAKE_CROSSCOMPILING FALSE )
/mnt/d/cmake-r2rt-ssh/Modules/CMakeDetermineSystem.cmake(127): set(PRESET_CMAKE_SYSTEM_NAME FALSE )
/mnt/d/cmake-r2rt-ssh/Modules/CMakeDetermineSystem.cmake(130): include(Platform/Linux-Determine OPTIONAL )
/mnt/d/cmake-r2rt-ssh/Modules/CMakeDetermineSystem.cmake(132): macro(ADJUST_CMAKE_SYSTEM_VARIABLES _PREFIX )
/mnt/d/cmake-r2rt-ssh/Modules/CMakeDetermineSystem.cmake(161): ADJUST_CMAKE_SYSTEM_VARIABLES(CMAKE_SYSTEM )
/mnt/d/cmake-r2rt-ssh/Modules/CMakeDetermineSystem.cmake(133): if(NOT CMAKE_SYSTEM_NAME )
/mnt/d/cmake-r2rt-ssh/Modules/CMakeDetermineSystem.cmake(138): if(CMAKE_SYSTEM_NAME MATCHES BSD.OS )
/mnt/d/cmake-r2rt-ssh/Modules/CMakeDetermineSystem.cmake(143): if(CMAKE_SYSTEM_NAME MATCHES kFreeBSD )
/mnt/d/cmake-r2rt-ssh/Modules/CMakeDetermineSystem.cmake(148): if(CMAKE_SYSTEM_NAME MATCHES CYGWIN )
/mnt/d/cmake-r2rt-ssh/Modules/CMakeDetermineSystem.cmake(153): set(CMAKE_SYSTEM Linux )
/mnt/d/cmake-r2rt-ssh/Modules/CMakeDetermineSystem.cmake(155): if(CMAKE_SYSTEM_VERSION )
/mnt/d/cmake-r2rt-ssh/Modules/CMakeDetermineSystem.cmake(156): set(CMAKE_SYSTEM Linux-4.4.0-43-Microsoft )
/mnt/d/cmake-r2rt-ssh/Modules/CMakeDetermineSystem.cmake(162): ADJUST_CMAKE_SYSTEM_VARIABLES(CMAKE_HOST_SYSTEM )
/mnt/d/cmake-r2rt-ssh/Modules/CMakeDetermineSystem.cmake(133): if(NOT CMAKE_HOST_SYSTEM_NAME )
/mnt/d/cmake-r2rt-ssh/Modules/CMakeDetermineSystem.cmake(138): if(CMAKE_HOST_SYSTEM_NAME MATCHES BSD.OS )
/mnt/d/cmake-r2rt-ssh/Modules/CMakeDetermineSystem.cmake(143): if(CMAKE_HOST_SYSTEM_NAME MATCHES kFreeBSD )
/mnt/d/cmake-r2rt-ssh/Modules/CMakeDetermineSystem.cmake(148): if(CMAKE_HOST_SYSTEM_NAME MATCHES CYGWIN )
/mnt/d/cmake-r2rt-ssh/Modules/CMakeDetermineSystem.cmake(153): set(CMAKE_HOST_SYSTEM Linux )
/mnt/d/cmake-r2rt-ssh/Modules/CMakeDetermineSystem.cmake(155): if(CMAKE_HOST_SYSTEM_VERSION )
/mnt/d/cmake-r2rt-ssh/Modules/CMakeDetermineSystem.cmake(156): set(CMAKE_HOST_SYSTEM Linux-4.4.0-43-Microsoft )
/mnt/d/cmake-r2rt-ssh/Modules/CMakeDetermineSystem.cmake(166): if(CMAKE_BINARY_DIR )
/mnt/d/cmake-r2rt-ssh/Modules/CMakeDetermineSystem.cmake(168): if(PRESET_CMAKE_SYSTEM_NAME )
/mnt/d/cmake-r2rt-ssh/Modules/CMakeDetermineSystem.cmake(173): else()
/mnt/d/cmake-r2rt-ssh/Modules/CMakeDetermineSystem.cmake(174): file(APPEND /mnt/d/cmake-r2rt-ssh/build/qwe/CMakeFiles/CMakeOutput.log The system is: Linux - 4.4.0-43-Microsoft - x86_64
)
/mnt/d/cmake-r2rt-ssh/Modules/CMakeDetermineSystem.cmake(180): set(INCLUDE_CMAKE_TOOLCHAIN_FILE_IF_REQUIRED )
/mnt/d/cmake-r2rt-ssh/Modules/CMakeDetermineSystem.cmake(181): if(CMAKE_TOOLCHAIN_FILE )
/mnt/d/cmake-r2rt-ssh/Modules/CMakeDetermineSystem.cmake(186): configure_file(/mnt/d/cmake-r2rt-ssh/Modules/CMakeSystem.cmake.in /mnt/d/cmake-r2rt-ssh/build/qwe/CMakeFiles/3.11.20180408-g843bd-dirty/CMakeSystem.cmake @ONLY )
/mnt/d/cmake-r2rt-ssh/build/qwe/CMakeFiles/3.11.20180408-g843bd-dirty/CMakeSystem.cmake(1): set(CMAKE_HOST_SYSTEM Linux-4.4.0-43-Microsoft )
/mnt/d/cmake-r2rt-ssh/build/qwe/CMakeFiles/3.11.20180408-g843bd-dirty/CMakeSystem.cmake(2): set(CMAKE_HOST_SYSTEM_NAME Linux )
/mnt/d/cmake-r2rt-ssh/build/qwe/CMakeFiles/3.11.20180408-g843bd-dirty/CMakeSystem.cmake(3): set(CMAKE_HOST_SYSTEM_VERSION 4.4.0-43-Microsoft )
/mnt/d/cmake-r2rt-ssh/build/qwe/CMakeFiles/3.11.20180408-g843bd-dirty/CMakeSystem.cmake(4): set(CMAKE_HOST_SYSTEM_PROCESSOR x86_64 )
/mnt/d/cmake-r2rt-ssh/build/qwe/CMakeFiles/3.11.20180408-g843bd-dirty/CMakeSystem.cmake(8): set(CMAKE_SYSTEM Linux-4.4.0-43-Microsoft )
/mnt/d/cmake-r2rt-ssh/build/qwe/CMakeFiles/3.11.20180408-g843bd-dirty/CMakeSystem.cmake(9): set(CMAKE_SYSTEM_NAME Linux )
/mnt/d/cmake-r2rt-ssh/build/qwe/CMakeFiles/3.11.20180408-g843bd-dirty/CMakeSystem.cmake(10): set(CMAKE_SYSTEM_VERSION 4.4.0-43-Microsoft )
/mnt/d/cmake-r2rt-ssh/build/qwe/CMakeFiles/3.11.20180408-g843bd-dirty/CMakeSystem.cmake(11): set(CMAKE_SYSTEM_PROCESSOR x86_64 )
/mnt/d/cmake-r2rt-ssh/build/qwe/CMakeFiles/3.11.20180408-g843bd-dirty/CMakeSystem.cmake(13): set(CMAKE_CROSSCOMPILING FALSE )
/mnt/d/cmake-r2rt-ssh/build/qwe/CMakeFiles/3.11.20180408-g843bd-dirty/CMakeSystem.cmake(15): set(CMAKE_SYSTEM_LOADED 1 )
/mnt/d/cmake-r2rt-ssh/Modules/CMakeUnixFindMake.cmake(5): find_program(CMAKE_MAKE_PROGRAM NAMES gmake make smake )
/mnt/d/cmake-r2rt-ssh/Modules/CMakeUnixFindMake.cmake(6): mark_as_advanced(CMAKE_MAKE_PROGRAM )
/mnt/d/cmake-r2rt-ssh/Modules/CMakeUnixFindMake.cmake(9): if(NOT CMAKE_MAKE_PROGRAM AND CMAKE_HOST_APPLE )
/mnt/d/cmake-r2rt-ssh/Modules/CMakeSystemSpecificInitialize.cmake(8): include(Platform/Linux-Initialize OPTIONAL )
/mnt/d/cmake-r2rt-ssh/Modules/CMakeSystemSpecificInitialize.cmake(10): set(CMAKE_SYSTEM_SPECIFIC_INITIALIZE_LOADED 1 )
/mnt/d/cmake-r2rt-ssh/Modules/CMakeDetermineCXXCompiler.cmake(23): include(/mnt/d/cmake-r2rt-ssh/Modules/CMakeDetermineCompiler.cmake )
/mnt/d/cmake-r2rt-ssh/Modules/CMakeDetermineCompiler.cmake(5): macro(_cmake_find_compiler lang )
/mnt/d/cmake-r2rt-ssh/Modules/CMakeDetermineCompiler.cmake(92): macro(_cmake_find_compiler_path lang )
/mnt/d/cmake-r2rt-ssh/Modules/CMakeDetermineCXXCompiler.cmake(26): include(Platform/Linux-Determine-CXX OPTIONAL )
/mnt/d/cmake-r2rt-ssh/Modules/Platform/Linux-Determine-CXX.cmake(1): if(NOT CMAKE_CXX_COMPILER_NAMES )
/mnt/d/cmake-r2rt-ssh/Modules/Platform/Linux-Determine-CXX.cmake(2): set(CMAKE_CXX_COMPILER_NAMES c++ )
/mnt/d/cmake-r2rt-ssh/Modules/CMakeDetermineCXXCompiler.cmake(27): include(Platform/Linux-CXX OPTIONAL )
/mnt/d/cmake-r2rt-ssh/Modules/CMakeDetermineCXXCompiler.cmake(28): if(NOT CMAKE_CXX_COMPILER_NAMES )
/mnt/d/cmake-r2rt-ssh/Modules/CMakeDetermineCXXCompiler.cmake(32): if(Unix Makefiles MATCHES Visual Studio )
/mnt/d/cmake-r2rt-ssh/Modules/CMakeDetermineCXXCompiler.cmake(33): elseif(Unix Makefiles MATCHES Xcode )
/mnt/d/cmake-r2rt-ssh/Modules/CMakeDetermineCXXCompiler.cmake(36): else()
/mnt/d/cmake-r2rt-ssh/Modules/CMakeDetermineCXXCompiler.cmake(37): if(NOT CMAKE_CXX_COMPILER )
/mnt/d/cmake-r2rt-ssh/Modules/CMakeDetermineCXXCompiler.cmake(38): set(CMAKE_CXX_COMPILER_INIT NOTFOUND )
/mnt/d/cmake-r2rt-ssh/Modules/CMakeDetermineCXXCompiler.cmake(41): if(NOT /usr/local/gcc-7.3/bin/g++-7.3 STREQUAL )
/mnt/d/cmake-r2rt-ssh/Modules/CMakeDetermineCXXCompiler.cmake(42): get_filename_component(CMAKE_CXX_COMPILER_INIT /usr/local/gcc-7.3/bin/g++-7.3 PROGRAM PROGRAM_ARGS CMAKE_CXX_FLAGS_ENV_INIT )
/mnt/d/cmake-r2rt-ssh/Modules/CMakeDetermineCXXCompiler.cmake(43): if(CMAKE_CXX_FLAGS_ENV_INIT )
/mnt/d/cmake-r2rt-ssh/Modules/CMakeDetermineCXXCompiler.cmake(46): if(NOT EXISTS /usr/local/gcc-7.3/bin/g++-7.3 )
/mnt/d/cmake-r2rt-ssh/Modules/CMakeDetermineCXXCompiler.cmake(52): if(CMAKE_GENERATOR_CXX )
/mnt/d/cmake-r2rt-ssh/Modules/CMakeDetermineCXXCompiler.cmake(59): if(NOT CMAKE_CXX_COMPILER_INIT )
/mnt/d/cmake-r2rt-ssh/Modules/CMakeDetermineCXXCompiler.cmake(63): _cmake_find_compiler(CXX )
/mnt/d/cmake-r2rt-ssh/Modules/CMakeDetermineCompiler.cmake(7): get_property(_languages GLOBAL PROPERTY ENABLED_LANGUAGES )
/mnt/d/cmake-r2rt-ssh/Modules/CMakeDetermineCompiler.cmake(8): list(REMOVE_ITEM _languages CXX )
/mnt/d/cmake-r2rt-ssh/Modules/CMakeDetermineCompiler.cmake(10): if(CMAKE_CXX_COMPILER_INIT )
/mnt/d/cmake-r2rt-ssh/Modules/CMakeDetermineCompiler.cmake(12): set(CMAKE_CXX_COMPILER_LIST /usr/local/gcc-7.3/bin/g++-7.3 )
/mnt/d/cmake-r2rt-ssh/Modules/CMakeDetermineCompiler.cmake(35): set(_CXX_COMPILER_HINTS )
/mnt/d/cmake-r2rt-ssh/Modules/CMakeDetermineCompiler.cmake(36): foreach(l )
/mnt/d/cmake-r2rt-ssh/Modules/CMakeDetermineCompiler.cmake(47): if(_CXX_COMPILER_HINTS )
/mnt/d/cmake-r2rt-ssh/Modules/CMakeDetermineCompiler.cmake(56): find_program(CMAKE_CXX_COMPILER NAMES /usr/local/gcc-7.3/bin/g++-7.3 DOC CXX compiler )
/mnt/d/cmake-r2rt-ssh/Modules/CMakeDetermineCompiler.cmake(57): if(CMAKE_CXX_COMPILER_INIT AND NOT CMAKE_CXX_COMPILER )
/mnt/d/cmake-r2rt-ssh/Modules/CMakeDetermineCompiler.cmake(60): unset(_CXX_COMPILER_HINTS )
/mnt/d/cmake-r2rt-ssh/Modules/CMakeDetermineCompiler.cmake(61): unset(_languages )
/mnt/d/cmake-r2rt-ssh/Modules/CMakeDetermineCompiler.cmake(64): if(CMAKE_HOST_APPLE )
/mnt/d/cmake-r2rt-ssh/Modules/CMakeDetermineCXXCompiler.cmake(67): mark_as_advanced(CMAKE_CXX_COMPILER )
/mnt/d/cmake-r2rt-ssh/Modules/CMakeDetermineCXXCompiler.cmake(72): set(CMAKE_CXX_COMPILER_ID_TEST_FLAGS_FIRST )
/mnt/d/cmake-r2rt-ssh/Modules/CMakeDetermineCXXCompiler.cmake(73): set(CMAKE_CXX_COMPILER_ID_TEST_FLAGS -c --c++ --ec++ )
/mnt/d/cmake-r2rt-ssh/Modules/CMakeDetermineCXXCompiler.cmake(83): if(NOT CMAKE_CXX_COMPILER_ID_RUN )
/mnt/d/cmake-r2rt-ssh/Modules/CMakeDetermineCXXCompiler.cmake(84): set(CMAKE_CXX_COMPILER_ID_RUN 1 )
/mnt/d/cmake-r2rt-ssh/Modules/CMakeDetermineCXXCompiler.cmake(87): set(CMAKE_CXX_COMPILER_ID )
/mnt/d/cmake-r2rt-ssh/Modules/CMakeDetermineCXXCompiler.cmake(88): set(CMAKE_CXX_PLATFORM_ID )
/mnt/d/cmake-r2rt-ssh/Modules/CMakeDetermineCXXCompiler.cmake(89): file(READ /mnt/d/cmake-r2rt-ssh/Modules/CMakePlatformId.h.in CMAKE_CXX_COMPILER_ID_PLATFORM_CONTENT )
/mnt/d/cmake-r2rt-ssh/Modules/CMakeDetermineCXXCompiler.cmake(94): list(APPEND CMAKE_CXX_COMPILER_ID_VENDORS IAR )
/mnt/d/cmake-r2rt-ssh/Modules/CMakeDetermineCXXCompiler.cmake(95): set(CMAKE_CXX_COMPILER_ID_VENDOR_FLAGS_IAR )
/mnt/d/cmake-r2rt-ssh/Modules/CMakeDetermineCXXCompiler.cmake(96): set(CMAKE_CXX_COMPILER_ID_VENDOR_REGEX_IAR IAR .+ Compiler )
/mnt/d/cmake-r2rt-ssh/Modules/CMakeDetermineCXXCompiler.cmake(103): set(CMAKE_CXX_COMPILER_ID_TOOL_MATCH_REGEX
Ld[^
]*(
[ ]+[^
]*)*
[ ]+([^
]+)[^
]*-o[^
]*CompilerIdCXX/(\./)?(CompilerIdCXX.xctest/)?CompilerIdCXX[
\"] )
/mnt/d/cmake-r2rt-ssh/Modules/CMakeDetermineCXXCompiler.cmake(104): set(CMAKE_CXX_COMPILER_ID_TOOL_MATCH_INDEX 2 )
/mnt/d/cmake-r2rt-ssh/Modules/CMakeDetermineCXXCompiler.cmake(106): include(/mnt/d/cmake-r2rt-ssh/Modules/CMakeDetermineCompilerId.cmake )
/mnt/d/cmake-r2rt-ssh/Modules/CMakeDetermineCompilerId.cmake(9): function(CMAKE_DETERMINE_COMPILER_ID lang flagvar src )
/mnt/d/cmake-r2rt-ssh/Modules/CMakeDetermineCompilerId.cmake(120): include(CMakeCompilerIdDetection )
/mnt/d/cmake-r2rt-ssh/Modules/CMakeCompilerIdDetection.cmake(5): function(_readFile file )
/mnt/d/cmake-r2rt-ssh/Modules/CMakeCompilerIdDetection.cmake(14): function(compiler_id_detection outvar lang )
/mnt/d/cmake-r2rt-ssh/Modules/CMakeDetermineCompilerId.cmake(124): function(CMAKE_DETERMINE_COMPILER_ID_WRITE lang src )
/mnt/d/cmake-r2rt-ssh/Modules/CMakeDetermineCompilerId.cmake(142): function(CMAKE_DETERMINE_COMPILER_ID_BUILD lang testflags userflags src )
/mnt/d/cmake-r2rt-ssh/Modules/CMakeDetermineCompilerId.cmake(456): function(CMAKE_DETERMINE_COMPILER_ID_MATCH_VENDOR lang output )
/mnt/d/cmake-r2rt-ssh/Modules/CMakeDetermineCompilerId.cmake(467): function(CMAKE_DETERMINE_COMPILER_ID_CHECK lang file )
/mnt/d/cmake-r2rt-ssh/Modules/CMakeDetermineCompilerId.cmake(667): function(CMAKE_DETERMINE_COMPILER_ID_VENDOR lang userflags )
/mnt/d/cmake-r2rt-ssh/Modules/CMakeDetermineCompilerId.cmake(714): function(CMAKE_DETERMINE_MSVC_SHOWINCLUDES_PREFIX lang userflags )
/mnt/d/cmake-r2rt-ssh/Modules/CMakeDetermineCompilerId.cmake(739): function(CMAKE_DIAGNOSE_UNSUPPORTED_CLANG lang envvar )
/mnt/d/cmake-r2rt-ssh/Modules/CMakeDetermineCXXCompiler.cmake(107): CMAKE_DETERMINE_COMPILER_ID(CXX CXXFLAGS CMakeCXXCompilerId.cpp )
terminate called after throwing an instance of 'std::logic_error'
what(): basic_string::_M_construct null not valid
Aborted (core dumped)